--- a/f2h2h1.github.io/SEO的经验.html
+++ b/f2h2h1.github.io/SEO的经验.html
@@ -278,11 +278,17 @@
 <li>国内<ul>
 <li>微信</li>
 <li>微博</li>
+<li>小红书</li>
+<li>抖音</li>
+<li>快手</li>
+<li>bilibili</li>
 </ul>
 </li>
 <li>国外<ul>
-<li>推特</li>
+<li>X</li>
 <li>脸书</li>
+<li>tiktok</li>
+<li>Instagram</li>
 </ul>
 </li>
 </ul>
