--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -179,6 +179,7 @@ top: true</p>
 <p>Build Your Own React.js in 400 Lines of Code: <a href="https://webdeveloper.beehiiv.com/p/build-react-400-lines-code">https://webdeveloper.beehiiv.com/p/build-react-400-lines-code</a></p>
 <p>Zero-dependency and lightweight React implementation: <a href="https://github.com/MarufZak/react-simplified">https://github.com/MarufZak/react-simplified</a></p>
 <p>Modern UI components to build your React app: <a href="https://dotui.org">https://dotui.org</a></p>
+<p>Develop, test, and share your React components faster: <a href="https://github.com/tajo/ladle">https://github.com/tajo/ladle</a></p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: <a href="https://blog.vuejs.org">https://blog.vuejs.org</a></p>
