--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -6,19 +6,17 @@ slug: get-started-with-langchain
 description: ""
 added: "Apr 9 2023"
 tags: [AI]</p>
-<h2>updatedDate: "July 28 2024"</h2>
-<p>ChatGPT isn’t the only way to interact with LLMs. OpenAI and other providers have released APIs allowing developers to interact directly with these models. And this is where LangChain comes in. LangChain is a framework for developing applications powered by language models, making them easier to integrate into applications.</p>
+<h2>updatedDate: "July 29 2024"</h2>
+<p>LangChain is a framework for developing applications powered by language models, making them easier to integrate into applications. LangChain makes it easy to prototype LLM applications and Agents.</p>
 <ul>
 <li>JS/TS Docs: <a href="https://js.langchain.com/docs">https://js.langchain.com/docs</a></li>
 <li>Awesome LangChain: <a href="https://github.com/kyrolabs/awesome-langchain">https://github.com/kyrolabs/awesome-langchain</a></li>
 <li>Chat with the LangChain JS/TS documentation: <a href="https://github.com/langchain-ai/chat-langchainjs">https://github.com/langchain-ai/chat-langchainjs</a></li>
 <li>Tutorials on building LLM powered applications: <a href="https://www.youtube.com/playlist?list=PLqZXAkvF1bPNQER9mLmDbntNfSpzdDIU5">https://www.youtube.com/playlist?list=PLqZXAkvF1bPNQER9mLmDbntNfSpzdDIU5</a></li>
 <li>LangChain JS Tutorial: <a href="https://www.youtube.com/playlist?list=PL4HikwTaYE0EG379sViZZ6QsFMjJ5Lfwj">https://www.youtube.com/playlist?list=PL4HikwTaYE0EG379sViZZ6QsFMjJ5Lfwj</a></li>
-<li>Flowise AI Tutorial: <a href="https://www.youtube.com/playlist?list=PL4HikwTaYE0H7wBxhvQqxYcKOkZ4O3zXh">https://www.youtube.com/playlist?list=PL4HikwTaYE0H7wBxhvQqxYcKOkZ4O3zXh</a></li>
-<li>Chat LangChain: <a href="https://chat.langchain.com">https://chat.langchain.com</a></li>
 </ul>
-<p>&lt;img alt="langchain-components" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hct713lr8nj314q0u0dmp.jpg" width="650"&gt;</p>
 <h3>Components: Building Blocks of LangChain</h3>
+<p>&lt;img alt="langchain-components" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hct713lr8nj314q0u0dmp.jpg" width="650"&gt;</p>
 <ul>
 <li>Schema (Text, Messages, Documents)</li>
 <li>Models (LLMs, Chat Models, Text Embedding Models)</li>
@@ -28,15 +26,20 @@ tags: [AI]</p>
 <li>Chains (Summarize, Chatbots, Question Answering)</li>
 <li>Agents (OpenAI functions, ReAct)</li>
 </ul>
-<p>LangChain makes it easy to prototype LLM applications and Agents. However, delivering LLM applications to production can be deceptively difficult. You will have to iterate on your prompts, chains, and other components to build a high-quality product. <a href="https://blog.langchain.dev/announcing-langsmith">LangSmith</a> is introduced to help developers close the gap between prototype and production.</p>
 <h3>LangChain and LlamaIndex</h3>
 <p>LlamaIndex is a remarkable data framework aimed at helping you build applications with LLMs by providing essential tools that facilitate data ingestion, structuring, retrieval, and integration with various application frameworks.</p>
 <p>There are similarities between LIamaIndex and LangChain in their functionalities including indexing, semantic search, retrieval, and vector databases. They both excel in tasks like question answering, document summarization, and building chatbots.</p>
 <p>However, each of them has its unique areas of focus. LangChain, with its extensive list of features, casts a wider net, concentrating on the use of chains and agents to connect with external APIs. On the other hand, LlamaIndex has a narrower focus shining in the area of data indexing and document retrieval. LIamaIndex and LangChain aren’t mutually exclusive. In fact, you can use both in your LLM applications. You can use both LlamaIndex’s data loader and query engine and LangChain’s agents.</p>
-<h3>Examples</h3>
-<p><code>npm install langchain</code> We currently support LangChain on Node.js 18 and 19. LangChain is written in TypeScript and provides type definitions for all of its public APIs.</p>
-<pre><code class="lang-js">// basic_call.ts
-import { OpenAI } from "langchain/llms";
+<h3>Examples of using LangChain</h3>
+<p>The LangChain libraries themselves are made up of several different packages.</p>
+<ul>
+<li><code>@langchain/core</code>: Base abstractions and LangChain Expression Language.</li>
+<li><code>@langchain/community</code>: Third party integrations.</li>
+<li><code>langchain</code>: Chains, agents, and retrieval strategies that make up an application's cognitive architecture.</li>
+</ul>
+<blockquote><p>The packages and APIs are subject to change. Below code examples are writen in early versions. Be sure to refer to the LangChainJS documentation for more details on specific functionalities.</p>
+</blockquote>
+<pre><code class="lang-js">import { OpenAI } from "langchain/llms";
 
 export const run = async () =&gt; {
   // temperature ranges from 0(deterministic) to 1(max creativity)
@@ -145,7 +148,7 @@ export const run = async () =&gt; {
   // {response: ' You said your name is John. Is there anything else you would like to talk about?'}
 };
 </code></pre>
-<p>In chains, a sequence of actions is hardcoded (in code). In agents, a language model is used as a reasoning engine to determine which actions to take and in which order. Agents are like bots/personal assistants that can take actions using external tools based on instructions from the LLM. Agents use an LLM to determine which actions to take and in what order.</p>
+<p>In agents, a language model is used as a reasoning engine to determine which actions to take and in which order. Agents are like bots/personal assistants that can take actions using external tools based on instructions from the LLM. Agents use an LLM to determine which actions to take and in what order.</p>
 <p>To initialize an agent in LangChain, you need to provide a list of tools, an LLM, and the name of the agent to use. For example, the agent, <code>zero-shot-react-description</code>, consults the ReAct (Reason + Act) framework to select the appropriate tool and relies only on the tool's description.</p>
 <blockquote><p>LangChain provides the tools you can use out of the box: <a href="https://js.langchain.com/docs/integrations/toolkits">https://js.langchain.com/docs/integrations/toolkits</a></p>
 </blockquote>
@@ -179,25 +182,6 @@ export const run = async () =&gt; {
    *  The number of countries raised to the power of 3
    *  is 157464
    */
-};
-</code></pre>
-<p>Embeddings are vector representations of text that computers can understand, analyze, and compare.</p>
-<pre><code class="lang-js">// embeddings.ts
-import { OpenAIEmbeddings } from "langchain/embeddings";
-
-export const run = async () =&gt; {
-  /* Embed query from the user */
-  const embeddings = new OpenAIEmbeddings();
-  const res = await embeddings.embedQuery("Hello world");
-  console.log("query vector", res);
-
-  /* Embed documents (converts your text/data to numbers) */
-  const documentRes = await embeddings.embedDocuments([
-    "Hello world",
-    "Bye bye",
-  ]);
-  console.log({ documentRes });
-  //
 };
 </code></pre>
 <p>Language models limit the amount of text that you can send to them per request. To overcome this challenge, we need to split the text into smaller chunks. The recommended TextSplitter is the <code>RecursiveCharacterTextSplitter</code>. This will split documents recursively by different characters - starting with <code>"\n\n"</code>, then <code>"\n"</code>, then <code>" "</code>. This is nice because it will try to keep all the semantically relevant content in the same place for as long as possible.</p>
