--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -814,6 +814,18 @@ textarea.addEventListener('input', e =&gt; e.target.dispatchEvent(eventAwesome))
 <li>Use <code>AbortController()</code> if you have a series of listeners you’d like to imperatively remove at once, or if you just like the syntax.</li>
 </ul>
 </blockquote>
+<pre><code class="lang-js">const button = document.getElementById('button');
+const controller = new AbortController();
+const { signal } = controller;
+
+button.addEventListener(
+  'click', 
+  () =&gt; console.log('clicked!'), 
+  { signal }
+);
+
+controller.abort();
+</code></pre>
 <h2>Promise</h2>
 <p>A <code>Promise</code> is a proxy for a value not necessarily known when the promise is created. The Promise object represents the eventual completion or failure of an asynchronous operation and its success value or failure reason. Instead of immediately returning the final value, the asynchronous method returns a promise to supply the value at some point in the future.</p>
 <p>A Promise is in one of these states: <code>pending</code>, <code>fulfilled</code>, <code>rejected</code>. A promise is said to be <code>settled</code> if it is either fulfilled or rejected, but not pending. A pending promise can either be fulfilled with a value or rejected with an error. When either of these options happens, the associated handlers queued up by a promise's <code>then</code> method are called. Note that <strong>promises are guaranteed to be asynchronous</strong>, so an action for an already "settled" promise will occur only after the stack has cleared and a clock-tick has passed. <strong>Promise executor functions should not be async</strong> (Don't do any awaiting inside the Promise constructor).</p>
