--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -527,6 +527,8 @@ if (!isInIframe &amp;&amp; !ua.toLowerCase().match(/micromessenger|android|iphon
 </li>
 <li><p>The order in which the events are fired: <code>mousedown</code> --&gt; <code>mouseup</code> --&gt; <code>click</code>. When you add a <code>blur</code> event, it is actually fired before the <code>mouseup</code> event and after the <code>mousedown</code> event of the button. Refer to <a href="https://codepen.io/mudassir0909/full/qBjvzL">https://codepen.io/mudassir0909/full/qBjvzL</a></p>
 </li>
+<li><p>Reading content with <code>textContent</code> is much faster than <code>innerText</code>. The <code>insertAdjacentHTML</code> method is much faster than <code>innerHTML</code> because it doesn’t have to destroy the DOM first before inserting.</p>
+</li>
 <li><p>If we are appending each list item to the DOM as we create it, this is inefficient because the DOM is updated each time we append a new list item. Instead, we can create a document fragment using <code>document.createDocumentFragment()</code> and append all of the list items to the fragment. Then, we can append the fragment to the DOM. This way, the DOM is only updated once.</p>
 </li>
 <li><p>Vue parent component will wait for its children to mount before it mounts its own template to the DOM. The order should be: parent created -&gt; child created -&gt; child mounted -&gt; parent mouted.</p>
