--- a/sakurawald.github.io/how to fix corrupted packages in archlinux.html
+++ b/sakurawald.github.io/how to fix corrupted packages in archlinux.html
@@ -33,8 +33,7 @@ grep -v "error" collect_packages.txt &gt; packages.txt
 <h3>Fix the <code>pacman</code> inside <code>host-os</code></h3>
 <p>First, we need to update the keyring inside <code>living os</code> using <code>pacman -Sy archlinux-keyring</code> to resolve the outdated gpg keys.
 Then, you can use <code>pacman --root /mnt -S $(&lt; packages.txt)</code> to re-install all the corrupted packages.</p>
-<blockquote><blockquote><p>If you need to modify mirrorlist, then you should modify the mirrorlist in <code>living os</code>, and use <code>pacman -Syy</code> to update databse.</p>
-</blockquote>
+<blockquote><p>If you need to modify mirrorlist, then you should modify the mirrorlist in <code>living os</code>, and use <code>pacman -Syy</code> to update databse.</p>
 </blockquote>
 <h3>Chroot into the host-os and do a fully-package upgrade again</h3>
 <p>You need to chroot into the host-os using <code>arch-chroot /mnt</code>
