--- a/informal.top/雅思备考 2024Q3.html
+++ b/informal.top/雅思备考 2024Q3.html
@@ -175,5 +175,31 @@
 </ul>
 <p>7.28：报名8.1重考</p>
 <ul>
-<li>口语：练习</li>
+<li>口语：练习10个p3，一节口语课</li>
+<li>作文：一篇大作文，6.0</li>
 </ul>
+<p>7.29</p>
+<ul>
+<li>口语：练习5个p3，一节口语课</li>
+<li>阅读：一套，6.5，差一道题7.0，可惜</li>
+<li>听力：一套练习+粗听，6.0，差一道题6.5，可惜</li>
+</ul>
+<p>7.30</p>
+<ul>
+<li>口语：模拟考试，5.5分，练习5个p3</li>
+<li>阅读：一套练习，6.5</li>
+<li>听力：一套练习+粗听，6.5</li>
+</ul>
+<p>7.31</p>
+<ul>
+<li>口语：一节口语课；练习剩余的p3，一共复习了54个p3；把54个p3的一分钟笔记练习了一遍；复习了比较难的p2</li>
+<li>阅读：一套练习，6.5</li>
+<li>听力：一套练习+粗听，6.0</li>
+</ul>
+<p>8.1 考试</p>
+<p><strong>口语</strong>：p2命中"买便宜东西的人"，但是he和she还是容易弄混。p3第一个问题回答的还可以，后面的部分听不懂在问什么，剩余4分钟都在掰扯了，一片混乱，5.5可能性偏大。5.0也有可能</p>
+<p><strong>听力</strong>：手机号码最后一段没听出来，perfume 少了最后的e，正常发挥；第二篇很不错，第三篇极差；第四篇正常发挥。6.0的可能性比较大</p>
+<p><strong>阅读</strong>：前两篇基本都看懂了同意替换，第三篇有三个空是懵的，剩下的平均水平。感觉7.0的可能性偏大</p>
+<p><strong>写作</strong>：先写了小作文，用了27分钟，策略失误了。大作文production, consumption 实在想不到同意替换，写完re了半篇结束了，正常发挥，感觉6.0</p>
+<p>结论：出结果之后，看是完全重考，还是单科重考口语。</p>
+<p>复习：口语的问题听不懂实在是难受，都不知道怎么复习了。。。</p>
