--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8656 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8658 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=iphyer.github.io/USA%E5%8D%B0%E8%B1%A121%3A%20Santa%20Fe%20%E6%B8%B8%E8%AE%B0.html>2024-07-28 USA印象21: Santa Fe 游记</a></li>
 
 <li><a href=blog.mauve.icu/Golang%20%E8%B8%A9%E5%9D%91%20%E2%80%94%E2%80%94%20interface%20%E4%B8%BA%E5%8F%82%E6%95%B0%E7%9A%84%E6%97%B6%E5%80%99%E4%BC%A0%20nil%20%E6%8C%87%E9%92%88.html>2024-07-28 Golang 踩坑 —— interface 为参数的时候传 nil 指针</a></li>
 
@@ -68,6 +70,8 @@
 <li><a href=conge.livingwithfcs.org/2024%20%E5%85%AD%E6%9C%88%E8%AF%BB%E5%8A%A8%E7%89%A9%E4%BF%9D%E6%8A%A4%EF%BC%8C%E7%BB%86%E9%9B%AA%EF%BC%8C%E4%BF%AE%E8%A1%8C%E2%80%A6%E2%80%A6%207%20%E6%9C%AC.html>2024-07-14 2024 六月读动物保护，细雪，修行…… 7 本</a></li>
 
 <li><a href=sund.site/RESTful%20Web%20Service%20Cookbook%20%E7%AC%94%E8%AE%B0.html>2024-07-13 RESTful Web Service Cookbook 笔记</a></li>
+
+<li><a href=iphyer.github.io/%E6%90%AC%E5%AE%B6%E8%AE%B0%E5%BD%955%3A%20Year%202024.html>2024-07-13 搬家记录5: Year 2024</a></li>
 
 <li><a href=sakurawald.github.io/how%20to%20fix%20corrupted%20packages%20in%20archlinux.html>2024-07-12 how to fix corrupted packages in archlinux</a></li>
 
